# Pdp

./: LICENSE  README.md  index.html  style.css
Test/: CMakeCache.txt  CMakeLists.txt  Makefile  Unit_test  cmake_install.cmake  main.cpp
client/: fontextractor.html  index.html  index.php  init.js  manipulate_canvas.js  remove.php  style.css  upload.php  upload_file.js
client/css/: style.css
client/data/: 3xnKqOkOXN.tif
client/js/: controller.js  init.js  manipulate_canvas.js  session.js  settings.js  upload_file.js
server/: Binarization.cpp  Binarization.hpp  BoundingBox.cc  BoundingBox.cpp  BoundingBox.h  BoundingBox.hpp  CMakeLists.txt  Character.cc  Character.cpp  Character.h  Character.hpp  ConnectedComponent.cc  ConnectedComponent.cpp  ConnectedComponent.h  ConnectedComponent.hpp  Font.cpp  Font.h  Font.hpp  Image.cc  Image.cpp  Image.h  Image.hpp  Line.cc  Line.cpp  Line.h  Line.hpp  Makefile  Paragraph.cc  Paragraph.h  Session.cpp  Session.hpp  main  main.cc  main.cpp
server/headers/: Binarization.hpp  Character.hpp  ConnectedComponent.hpp  Font.hpp  GrayscaleCharsDegradationModel.hpp  Image.hpp  Line.hpp  Session.hpp  connectedcomponentextraction.h  json.hpp
server/html/: index.html
server/src/: Binarization.cpp  Character.cpp  ConnectedComponent.cpp  Font.cpp  GrayscaleCharsDegradationModel.cpp  Image.cpp  Line.cpp  Session.cpp  connectedcomponentextraction.cpp  main.cpp
